--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dashboard-BE",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,5 +17,6 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "ramda": "^0.27.1"
-  }
+  },
+  "devDependencies": {}
 }
