--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "uuid-js": "^0.7.5"
   },
   "devDependencies": {}
 }
