--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "ramda": "^0.27.1",
-    "uuid-js": "^0.7.5"
+    "uuid-js": "^0.7.5",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {}
 }
